--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   "devDependencies": {
     "grunt": "1.0.1",
     "grunt-release": "0.14.0",
-    "mocha": "3.1.2"
+    "mocha": "3.1.2",
+    "should": "11.1.1",
+    "sinon": "1.17.6"
   },
   "optionalDependencies": {
     "mysql": "2.11.1",
