--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "coloured-log": "0.9.7",
     "commander": "2.9.0",
     "debug": "2.2.0",
-    "knex": "0.12.5",
+    "knex": "0.12.2",
     "lodash": "4.16.4"
   },
   "files": [
@@ -42,7 +42,9 @@
   "devDependencies": {
     "grunt": "1.0.1",
     "grunt-release": "0.14.0",
-    "mocha": "3.1.2"
+    "mocha": "3.1.2",
+    "should": "11.1.1",
+    "sinon": "1.17.6"
   },
   "optionalDependencies": {
     "mysql": "2.11.1",
