--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "coloured-log": "0.9.7",
     "commander": "2.9.0",
     "debug": "2.2.0",
+    "ghost-ignition": "2.8.1",
     "knex": "0.12.2",
     "lodash": "4.16.4",
     "resolve": "1.1.7"
