--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "commander": "2.9.0",
     "debug": "^2.2.0",
     "ghost-ignition": "^2.8.2",
-    "knex": "0.12.2",
+    "knex": "^0.12.8",
     "lodash": "^4.16.4",
     "resolve": "1.1.7"
   },
