--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "main": "lib",
   "license": "MIT",
   "scripts": {
-    "test": "LEVEL=fatal _mocha --report lcovonly -- test/*_spec.js"
+    "lint": "eslint bin lib",
+    "test": "npm run lint && LEVEL=fatal _mocha --report lcovonly -- test/*_spec.js"
   },
   "bin": {
     "knex-migrator": "./bin/knex-migrator",
@@ -46,6 +47,7 @@
     "logging.js"
   ],
   "devDependencies": {
+    "eslint": "4.8.0",
     "grunt": "1.0.1",
     "grunt-release": "0.14.0",
     "mocha": "3.1.2",
