--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "ghost-ignition": "^2.8.16",
         "knex": "^0.12.8",
         "lodash": "^4.16.4",
+        "nconf": "^0.8.5",
         "resolve": "1.1.7"
     },
     "files": [
