--- a/package.json
+++ b/package.json
@@ -61,5 +61,10 @@
   "optionalDependencies": {
     "mysql": "^2.11.1",
     "sqlite3": "^3.1.8"
+  },
+  "standard-version": {
+    "skip": {
+      "tag": true
+    }
   }
 }
