Correct version number comparison
The utils function isGreaterThanVersion was causing the following case:
1.10.0 would be classified as greater than 2.0.0. This was because
both would be stripped of their full stops (periods) and converted into
numbers. Resulting in a comparison of 1100 (1.10.0) against 200.

The compare-ver library has been introduced to handle semver like
comparisons.

Closes #97

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "commander": "2.9.0",
+    "compare-ver": "^2.0.2",
     "debug": "^2.2.0",
     "ghost-ignition": "^2.8.16",
     "knex": "^0.14.2",
