--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,9 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
-# nyc test coverage
+# coverage
 .nyc_output
+coverage
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
