--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "logging.js"
   ],
   "devDependencies": {
-    "eslint": "4.8.0",
+    "eslint": "4.19.1",
+    "eslint-plugin-ghost": "0.0.23",
     "grunt": "1.0.1",
     "grunt-release": "0.14.0",
     "mocha": "3.1.2",
