--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "knex-migrator-reset": "./bin/knex-migrator-reset",
     "knex-migrator-rollback": "./bin/knex-migrator-rollback"
   },
+  "engines": {
+    "node": ">=6"
+  },
   "dependencies": {
     "bluebird": "^3.4.6",
     "commander": "2.9.0",
