--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint": "4.19.1",
     "mocha": "3.1.2",
     "nyc": "11.7.1",
+    "rimraf": "2.6.2",
     "should": "11.1.1",
     "sinon": "1.17.6"
   },
