Changed rollback task
no issue

- do not rollback all tasks of a version
- e.g.
  - version 2.0 has 4 scripts
  - it failed in the second script
  - we don't have to rollback all 4 scripts
  - only the second and the first
    - only rollback the second if it wasn't running in a transaction

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint bin lib",
-    "test": "yarn lint && LEVEL=fatal _mocha --require test/utils.js --report lcovonly -- test/*_spec.js",
+    "test": "yarn lint && LEVEL=fatal _mocha --require test/utils.js --report lcovonly -- test/**/*_spec.js",
+    "test:unit": "yarn lint && LEVEL=fatal _mocha --require test/utils.js --report lcovonly -- test/unit/*_spec.js",
     "posttest": "yarn lint",
     "coverage": "nyc --reporter=lcov _mocha --require test/utils.js -- test/*_spec.js",
     "preship": "yarn test",
