--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "compare-ver": "^2.0.2",
     "debug": "^2.2.0",
     "ghost-ignition": "2.9.2",
-    "knex": "^0.14.2",
+    "knex": "https://github.com/kirrg001/knex/tarball/d979ee6fa9b979e3be6f867dff015fdbc1f574ba",
     "lodash": "^4.16.4",
     "moment": "^2.19.3",
     "nconf": "^0.10.0",
