--- a/package.json
+++ b/package.json
@@ -47,16 +47,16 @@
     "node": ">=6"
   },
   "dependencies": {
-    "bluebird": "3.5.3",
-    "commander": "2.19.0",
+    "bluebird": "^3.5.3",
+    "commander": "^2.19.0",
     "compare-ver": "^2.0.2",
-    "debug": "4.1.1",
-    "ghost-ignition": "2.9.6",
-    "knex": "0.16.3",
-    "lodash": "4.17.11",
-    "moment": "2.23.0",
+    "debug": "^4.1.1",
+    "ghost-ignition": "^2.9.6",
+    "knex": "^0.16.3",
+    "lodash": "^4.17.11",
+    "moment": "^2.23.0",
     "nconf": "^0.10.0",
-    "resolve": "1.9.0"
+    "resolve": "^1.9.0"
   },
   "files": [
     "bin",
