--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint lib --ext .js --cache",
-    "test": "yarn lint && LEVEL=fatal _mocha --require test/utils.js --report --exit lcovonly -- test/**/*_spec.js",
+    "test": "LEVEL=fatal _mocha --require test/utils.js --report --exit lcovonly -- test/**/*_spec.js",
     "test:unit": "yarn lint && LEVEL=fatal _mocha --require test/utils.js --report lcovonly -- test/unit/*_spec.js",
     "posttest": "yarn lint",
     "coverage": "nyc --reporter=lcov _mocha --require test/utils.js -- test/*_spec.js",
@@ -64,8 +64,8 @@
     "logging.js"
   ],
   "devDependencies": {
-    "eslint": "5.12.1",
-    "eslint-plugin-ghost": "0.1.0",
+    "eslint": "5.15.3",
+    "eslint-plugin-ghost": "0.2.0",
     "mocha": "5.2.0",
     "nyc": "13.1.0",
     "rimraf": "2.6.3",
