Switched to automergePatch
- This is a critical package. It is responsible to do database migrations.
- Minor updates should be reviewed carefully IMO.
- Feel free to change this rule back if you like. This is just my personal impression.

--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
      "group:linters",
      ":maintainLockFilesWeekly",
      ":prHourlyLimitNone",
-     ":automergeMinor"
+     ":automergePatch"
   ],
   "travis": { "enabled": true },
   "node": {
