--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,11 @@
 {
   "extends": [
     "config:base",
-     "group:jsTestMonMajor",
-     "group:linters",
-     ":maintainLockFilesWeekly",
-     ":prHourlyLimitNone",
-     ":automergePatch"
+    "group:jsTestMonMajor",
+    "group:linters",
+    ":maintainLockFilesWeekly",
+    "schedule:earlyMondays",
+    ":automergePatch"
   ],
   "travis": { "enabled": true },
   "node": {
