Update Renovate Configuration
- Use the new shared configuration

--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,8 @@
 {
   "extends": [
-    "config:base",
-    "group:jsTestMonMajor",
-    "group:linters",
-    ":maintainLockFilesWeekly",
-    "schedule:earlyMondays",
-    ":automergePatch"
+    "@tryghost:base",
+    ":automergePatch",
+    "@tryghost:automergeSilentTestLintNonMajor"  
   ],
   "travis": { "enabled": true },
   "node": {
