Added optional environmental variable to yarn ship command
no issue

- The $GHOST_UPSTREAM variable is used in other repositories already e.g. Slimer - https://github.com/TryGhost/super-slimer/blob/e78b3c5c0ef32eee34d0e477f17087e93664d286/lib/repo.js#L73
- This allows to optionally have the variable or use the default of 'upstream' remote name

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "posttest": "yarn lint",
     "coverage": "nyc --reporter=lcov _mocha --require test/utils.js -- test/*_spec.js",
     "preship": "yarn test",
-    "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then yarn publish && git push upstream master --follow-tags; fi"
+    "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then yarn publish && git push ${GHOST_UPSTREAM:-upstream} master --follow-tags; fi"
   },
   "bin": {
     "knex-migrator": "./bin/knex-migrator",
