--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "main": "lib",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint lib --ext .js --cache",
+    "lint": "eslint --ext .js --cache lib/** test/**",
     "test": "LEVEL=fatal _mocha --require test/utils.js --report --exit lcovonly -- test/**/*_spec.js",
     "test:unit": "yarn lint && LEVEL=fatal _mocha --require test/utils.js --report lcovonly -- test/unit/*_spec.js",
     "posttest": "yarn lint",
