--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "knex-migrator-rollback": "./bin/knex-migrator-rollback"
   },
   "engines": {
-    "node": ">=8"
+    "node": "^10.13.0 || ^12.10.0"
   },
   "dependencies": {
     "bluebird": "^3.5.3",
