--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,9 @@ jobs:
     name: Node ${{ matrix.node }} - ${{ matrix.env.DB }}
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: daniellockyer/setup-node@master
         with:
+          mirror: https://npm.taobao.org/mirrors/node/
           node-version: ${{ matrix.node }}
 
       - name: Shutdown MySQL
