--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,8 @@
 {
   "extends": [
-    "@tryghost:base",
+    "@tryghost:quietJS",
     "@tryghost:groupTestLint",
     "@tryghost:groupCSS",
-    "@tryghost:groupBuildTools",
-    "@tryghost:automergeTestLint"
+    "@tryghost:groupBuildTools"
   ]
 }
