--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "knex-migrator-rollback": "./bin/knex-migrator-rollback"
   },
   "engines": {
-    "node": "^12.10.0 || ^14.14.0"
+    "node": "^12.22.1 || ^14.17.0 || ^16.13.0"
   },
   "dependencies": {
     "bluebird": "3.7.2",
