--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "sinon": "9.2.4"
   },
   "optionalDependencies": {
-    "mysql": "2.18.1",
+    "mysql2": "2.3.3",
     "sqlite3": "5.0.2"
   }
 }
