--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "compare-ver": "2.0.2",
     "debug": "4.3.4",
     "ghost-ignition": "4.6.3",
-    "knex": "0.21.21",
+    "knex": "1.0.4",
     "lodash": "4.17.21",
     "moment": "2.24.0",
     "nconf": "0.11.3",
@@ -76,7 +76,7 @@
     "sinon": "9.2.4"
   },
   "optionalDependencies": {
-    "mysql2": "2.3.3",
-    "sqlite3": "5.0.2"
+    "better-sqlite3": "7.5.0",
+    "mysql2": "2.3.3"
   }
 }
