--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "node": "^12.22.1 || ^14.17.0 || ^16.13.0"
   },
   "dependencies": {
+    "@tryghost/database-info": "0.2.5",
     "@tryghost/logging": "2.1.1",
     "bluebird": "3.7.2",
     "commander": "5.1.0",
