🔥 Dropped support for Node 12
refs https://github.com/TryGhost/Toolbox/issues/267

- Node 12 is now EOL so we don't need to support it anymore

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "knex-migrator-rollback": "./bin/knex-migrator-rollback"
   },
   "engines": {
-    "node": "^12.22.1 || ^14.17.0 || ^16.13.0"
+    "node": "^14.17.0 || ^16.13.0"
   },
   "dependencies": {
     "@tryghost/database-info": "0.3.7",
